# Infodengue_flet

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
geodata/: features.py  wfs.py
test_notebooks/: City_plots.ipynb  state_maps.ipynb
tests/: test_geodata.py
viz/: charts.py
