[project]
name = "infodengue-flet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]>=0.25.1",
    "geojson>=3.2.0",
    "geopandas>=1.0.1",
    "mapclassify>=2.8.1",
    "mosqlient>=1.7.2",
    "owslib>=0.32.1",
    "plotly>=5.24.1",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "aider-chat>=0.68.0",
    "nbstripout>=0.8.1",
    "pytest>=8.3.4",
]
